--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -59,14 +59,14 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Login"
-            app:layout_constraintBottom_toTopOf="@+id/sign_up"
+            app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.431" />
 
         <Button
-            android:id="@+id/sign_up"
+            android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
