--- a/app/src/main/res/layout/activity_add_expenditure_prompt.xml
+++ b/app/src/main/res/layout/activity_add_expenditure_prompt.xml
@@ -44,9 +44,9 @@
         android:layout_height="41dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:digits="0123456789."
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Entry Amount"
+        android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
