--- a/app/src/main/res/layout/activity_add_expenditure_prompt.xml
+++ b/app/src/main/res/layout/activity_add_expenditure_prompt.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/design_default_color_primary">
+    android:background="@drawable/customborderg">
 
     <Spinner
         android:id="@+id/categoryList"
