--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -43,13 +43,6 @@
             android:text="personal" />
 
         <Button
-            android:id="@+id/supervisee_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="supervisee" />
-
-        <Button
             android:id="@+id/group_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -111,6 +104,14 @@
 
         <Spinner
             android:id="@+id/sort_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
+        <Spinner
+            android:id="@+id/supervisee_dropdown"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
