--- a/app/src/main/res/layout/drawer_header_main.xml
+++ b/app/src/main/res/layout/drawer_header_main.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/nav_header"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:background="@color/colorAccent"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackgroundBorderless"
-    android:gravity="bottom"
-    android:orientation="vertical"
+    android:layout_height="100dp"
+    android:background="?attr/colorPrimaryDark"
     android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
-    <ImageView
-        android:id="@+id/nav_header_imageView"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:src="@mipmap/ic_launcher" />
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:orientation="vertical"
+    android:gravity="bottom">
 
     <TextView
-        android:id="@+id/nav_header_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:text="username"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:id="@+id/drawer_header_text"
+        android:text="@string/startup"
+        android:background="?attr/colorPrimaryDark"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+
 </LinearLayout>
