--- a/app/src/main/res/layout/activity_categories_listview.xml
+++ b/app/src/main/res/layout/activity_categories_listview.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:gravity="center">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textCategory"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dip"
-        android:textSize="16dip"
+        android:layout_height="fill_parent"
+        android:background="@drawable/listview_selected"
+        android:gravity="center"
+        android:paddingLeft="50dip"
+        android:paddingTop="10dip"
+        android:paddingRight="10dip"
+        android:paddingBottom="10dip"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
         android:textStyle="bold" />
 </LinearLayout>
