--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#d81b60</color>
+    <color name="colorPrimary">#06eb7b</color>
+    <color name="colorPrimaryDark">#08ba40</color>
+    <color name="colorAccent">#dc006b</color>
     <color name="colorPrimaryAlpha">#b3008577</color>
 </resources>
