--- a/app/src/main/res/layout/activity_settings_supervisor.xml
+++ b/app/src/main/res/layout/activity_settings_supervisor.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".SettingsSupervisorActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            />
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <ListView
+        android:id="@+id/settingsList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:clickable="true"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="2dp"
+        android:focusable="true"
+        android:longClickable="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
